Fix api gateway

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -4,21 +4,21 @@ server.port=8080
 
 app.api-prefix=/api
 
-eureka.client.service-url.default-zone=http://localhost:8765/eureka/
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 
 spring.cloud.gateway.routes[0].id=currency-conversion-service
 spring.cloud.gateway.routes[0].uri=lb://currency-conversion-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=${app.api-prefix}/**
-spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+spring.cloud.gateway.routes[0].predicates[0]=Path=${app.api-prefix}/conversion/**
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=2
 
 spring.cloud.gateway.routes[1].id=currency-exchange-service
 spring.cloud.gateway.routes[1].uri=lb://currency-exchange-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=${app.api-prefix}/**
-spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
+spring.cloud.gateway.routes[1].predicates[0]=Path=${app.api-prefix}/exchange/**
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=2
 
 spring.cloud.gateway.routes[2].id=eureka-server
 spring.cloud.gateway.routes[2].uri=http://localhost:8761/
-spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka
+spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
 spring.cloud.gateway.routes[2].filters[0]=SetPath=/
 
 spring.cloud.gateway.routes[3].id=eureka-server-static
