--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.config.import=configserver:http://localhost:8888
 # spring.cloud.loadbalancer.instances.currency-exchange-service[0].uri=http://localhost:8081
 # currency-exchange-service.ribbon.listOfServers=http://localhost:8081
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
