--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -4,6 +4,17 @@ server.port=8080
 
 app.api-prefix=/api
 
+# management.tracing.enabled=true
+# management.zipkin.enabled=true
+# management.zipkin.baseUrl=http://localhost:9411
+
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
+management.tracing.sampling.probability=1.0
+management.endpoints.web.exposure.include=prometheus
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+eureka.instance.preferIpAddress=true
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 
 spring.cloud.gateway.routes[0].id=currency-conversion-service
