--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -7,4 +7,11 @@ spring.config.import=configserver:http://localhost:8888
 # spring.cloud.loadbalancer.instances.currency-exchange-service[0].uri=http://localhost:8081
 # currency-exchange-service.ribbon.listOfServers=http://localhost:8081
 
+eureka.instance.preferIpAddress=true
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
+management.tracing.sampling.probability=1.0
+management.endpoints.web.exposure.include=prometheus
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
