--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -13,4 +13,11 @@ server.port=8081
 
 spring.config.import=configserver:http://localhost:8888
 
+eureka.instance.preferIpAddress=true
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
+management.tracing.sampling.probability=1.0
+management.endpoints.web.exposure.include=prometheus
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
