--- a/limits-service/src/main/resources/application.properties
+++ b/limits-service/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 spring.application.name=limits-service
+spring.profiles.active=qa
 
 server.port=8181
 
-# spring.cloud.config.uri=http://localhost:8888
 
 spring.config.import=configserver:http://localhost:8888
 
-# application.configserver.properties=limits-service
+management.security.enabled=false
+
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.serviceA.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.serviceA.waitDurationInOpenState=10000
+resilience4j.circuitbreaker.instances.serviceA.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.serviceA.ringBufferSizeInClosedState=5
+resilience4j.circuitbreaker.instances.serviceA.ringBufferSizeInHalfOpenState=2
+resilience4j.circuitbreaker.instances.serviceA.slidingWindowType=COUNT_BASED
