--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.application.name=spring-cloud-config-server
 server.port=8888
 
 spring.cloud.config.server.git.uri=file:///D:/LEARN/Mot_so_cong_nghe_phat_trien_phan_mem/TH-2/microservices/git-localconfig-repo
+
+spring.cloud.bus.enabled=true
+management.endpoints.web.exposure.include=busrefresh
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.template.encoding=UTF-8
